WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117051
It's easy to hit ASSERT_NOT_REACHED in WKDOMNodeClass
https://bugs.webkit.org/show_bug.cgi?id=117051
Summary
It's easy to hit ASSERT_NOT_REACHED in WKDOMNodeClass
Tim Horton
Reported
2013-05-30 15:34:28 PDT
It doesn't make any sense; it's easy for clients to hit this assertion. For example: WebKit::WKDOMNodeClass(WebCore::Node*) + 218 (WKDOMInternals.mm:89) WebKit::initWithImpl(WebCore::Node*) + 21 (WKDOMInternals.mm:93) WKDOMNode* WebKit::toWKDOMType<WebCore::Node*, WKDOMNode*>(WebCore::Node*, WebKit::DOMCache<WebCore::Node*, WKDOMNode*>&) + 139 (WKDOMInternals.mm:162) WebKit::toWKDOMNode(WebCore::Node*) + 37 (WKDOMInternals.mm:103) -[WKDOMNode firstChild] + 54 (WKDOMNode.mm:91) Can easily get called with a comment node.
Attachments
patch
(1.16 KB, patch)
2013-05-30 15:37 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
patch2
(1.37 KB, patch)
2013-05-30 17:18 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-05-30 15:37:49 PDT
Created
attachment 203388
[details]
patch
Tim Horton
Comment 2
2013-05-30 17:08:49 PDT
http://trac.webkit.org/changeset/150989
, but Sam thinks that we should return [WKDOMNode class]; instead, and that does seem reasonable.
Tim Horton
Comment 3
2013-05-30 17:18:03 PDT
<
rdar://problem/14009163
>
Tim Horton
Comment 4
2013-05-30 17:18:53 PDT
Created
attachment 203401
[details]
patch2
WebKit Commit Bot
Comment 5
2013-05-30 19:05:42 PDT
Comment on
attachment 203401
[details]
patch2 Clearing flags on attachment: 203401 Committed
r151001
: <
http://trac.webkit.org/changeset/151001
>
WebKit Commit Bot
Comment 6
2013-05-30 19:05:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug