Remove ASSERT_NOT_REACHED from WKDOMNodeClass https://bugs.webkit.org/show_bug.cgi?id=117051

Reviewed by Anders Carlsson.

It's easy to fail this assertion in seemingly-legitimate cases.

* WebProcess/InjectedBundle/API/mac/WKDOMInternals.mm:
(WebKit::WKDOMNodeClass):


Canonical link: https://commits.webkit.org/135311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150989 268f45cc-cd09-0410-ab3c-d52691b4dbfc